[project]
name = "httpfpt"
description = "基于 HTTP 请求的快速数据驱动 pytest 接口自动化测试框架"
dynamic = [
    "version",
]
authors = [
    {name = "Wu Clan", email = "jianhengwu0407@gmail.com"},
]
dependencies = [
    "allure-pytest==2.13.2",
    "cache3>=0.4.3",
    "cappa==0.17.1",
    "cryptography>=41.0.6",
    "dbutils>=3.0.2",
    "dirty-equals==0.7.1",
    "faker>=13.15.0",
    "httpx>=0.23.0",
    "jinja2>=3.1.3",
    "loguru>=0.6.0",
    "pre-commit>=3.2.2",
    "py==1.11.0",
    "pydantic>=2.6.0",
    "pymysql>=0.9.3",
    "pytest>=8.0.0,<=8.0.2",
    "pytest-html==4.0.0",
    "pytest-metadata==3.0.0",
    "pytest-pretty>=1.2.0",
    "python-dotenv>=0.20.0",
    "python-jsonpath>=1.0.0",
    "pyyaml>=6.0.1",
    "redis[hiredis]>=5.0.1",
    "requests>=2.31.0",
    "rtoml>=0.9.0",
    "eval_type_backport>=0.1.3",
    "stamina>=24.1.0",
    "typing_extensions>=4.8.0",
    "jsonschema>=4.21.1",
    "pygments>=2.17.2",
    "glom==23.5.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
version = { source = "file", path = "httpfpt/__init__.py" }

[tool.pdm.dev-dependencies]
test = [
    "pyright==1.1.349",
    "ruff>=0.4.0",
]

[tool.pdm.scripts]
lint = "pre-commit run --all-files"
typing = "pyright -p ."

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
