[project]
name = "httpfpt"
description = "基于 HTTP 请求的快速数据驱动 pytest 接口自动化测试框架"
authors = [
    { name = "Wu Clan", email = "jianhengwu0407@gmail.com" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dynamic = [
    "version",
]
dependencies = [
    "allure-pytest==2.13.2",
    "cache3>=0.4.3",
    "cappa>=0.31.0",
    "cryptography>=41.0.6",
    "dbutils>=3.0.2",
    "dirty-equals==0.7.1",
    "faker>=13.15.0",
    "httpx>=0.23.0",
    "jinja2>=3.1.3",
    "loguru>=0.6.0",
    "pre-commit>=3.2.2",
    "py==1.11.0",
    "pydantic>=2.6.0",
    "pymysql>=0.9.3",
    "pytest>=8.0.0,<=8.0.2",
    "pytest-html==4.0.0",
    "pytest-metadata==3.0.0",
    "pytest-pretty>=1.2.0",
    "python-dotenv>=0.20.0",
    "python-jsonpath>=1.0.0",
    "pyyaml>=6.0.1",
    "redis[hiredis]>=5.0.1",
    "requests>=2.31.0",
    "rtoml==0.9.0",
    "xlrd==1.2.0",
    "eval_type_backport>=0.1.3",
    "stamina>=24.1.0",
    "typing_extensions>=4.8.0",
    "jsonschema>=4.21.1",
    "pygments>=2.17.2",
    "glom==23.5.0",
    "ruamel-yaml>=0.18.10",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
homepage = "https://wu-clan.github.io/httpfpt_docs/"
repository = "https://github.com/wu-clan/httpfpt"

[dependency-groups]
dev = [
    "ruff>=0.14.8",
    "ty>=0.0.1a31",
]

[tool.ty.src]
exclude = [
    "**/__pycache__",
    "**/.*",
    "httpfpt/testcases/**",
    "httpfpt/utils/data_manage/**",
    "httpfpt/conftest.py",
    "httpfpt/utils/auth_plugins.py"
]

[tool.hatch.version]
path = "httpfpt/__init__.py"

[project.scripts]
httpfpt = "httpfpt.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
